--- a/css/style.css
+++ b/css/style.css
@@ -121,14 +121,14 @@ body {
 }
 
 /* container for header to put in a row Logo, Navigation and Contacts. */
+.header {
+  border-bottom: 1px solid #ececec;
+}
 
 .container-nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-bottom: 25px;
-  padding-top: 24px;
-  border-bottom: 1px solid #ececec;
 }
 
 .nav-panel {
@@ -148,13 +148,17 @@ body {
 .nav-menu {
   display: flex;
   align-items: center;
-  margin-left: 93px;
+  margin: 32px 0px 32px 93px;
 }
 
 /* create space between navigation's items */
 
 .nav-menu .nav-menu-item:not(:first-child) {
   margin-left: 50px;
+}
+
+.nav-menu-item {
+  position: relative;
 }
 
 .nav-menu-link {
@@ -164,9 +168,26 @@ body {
   color: inherit;
 }
 
-.nav-menu-link:hover,
-.nav-menu-link:focus {
+.nav-menu-link::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 45px;
+  height: 4px;
+  width: 100%;
+  border-radius: 4px;
+  background-color: var(--modify-text-color);
+  opacity: 0;
+}
+
+.nav-menu-item:hover .nav-menu-link,
+.nav-menu-item:focus .nav-menu-link {
   color: var(--modify-text-color);
+}
+
+.nav-menu-item:hover .nav-menu-link::after,
+.nav-menu-item:focus .nav-menu-link::after {
+  opacity: 1;
 }
 
 .contacts-list {
@@ -324,6 +345,24 @@ body {
   justify-content: space-between;
 }
 
+.work-proccess-list .work-proccess-item {
+  position: relative;
+}
+
+.proccess-subtitle {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  padding: 27px 0px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+  line-height: 1.17;
+  color: var(--bgcolor);
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
 .our-team-container {
   background-color: var(--filter-btn-color);
 }
@@ -384,7 +423,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 12px;
+  width: 44px;
+  height: 44px;
   border-radius: 100%;
 }
 
@@ -493,11 +533,44 @@ body {
 }
 
 .sm-container-title {
+  display: block;
+  margin-bottom: 20px;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--bgcolor);
 }
+
+.social-media {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.sm-item {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.sm-item:hover,
+.sm-item:focus {
+  background-color: var(--modify-text-color);
+}
+
+.social-media .sm-item + .sm-item {
+  margin-left: 10px;
+}
+
+.sm-icon {
+  fill: var(--bgcolor);
+}
+
 .portfolio-filter-list {
   display: flex;
   align-items: center;
@@ -505,7 +578,7 @@ body {
   margin-bottom: 34px;
 }
 
-.portfolio-filter-list .portfolio-item + .portfolio-item {
+.portfolio-filter-list .portfolio-button + .portfolio-button {
   margin-left: 8px;
 }
 
@@ -549,8 +622,35 @@ body {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+.project-pic-description {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .project-image {
   display: block;
+}
+
+.project-description-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
+.project-description {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 322px;
+  font-size: 18px;
+  line-height: 1.5;
+  color: var(--bgcolor);
+  background-color: rgba(33, 150, 243, 0.9);
 }
 
 .add-border {
@@ -575,7 +675,51 @@ body {
   color: var(--modify-text-color);
 }
 
+.color-modify::after {
+  opacity: 1;
+}
+
 .bg-modify {
   background-color: var(--modify-text-color);
   color: var(--bgcolor);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* pointer-events: all; */
+  width: 528px;
+  height: 581px;
+  background-color: var(--bgcolor);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-button {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 100%;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+}
+
+.is-hidden {
+  /* visibility: none; */
+  pointer-events: none;
+  opacity: 0;
 }
